# buffer-thief

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: bufferthiefConfig.cmake.in
include/bufferthief/: config.hh.in  string.hh  vector.hh
include/bufferthief/private/: common_string.hh  common_vector.hh  member_accessor.hh  string_libc++.hh  string_libstdc++.hh  string_msvc_stl.hh  vector_libstdc++.hh
test/: CMakeLists.txt  string_test.cc
